--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">bookshelf_firebase</string>
+
+    //misc
+    <string name="descricao">Descrição</string>
 </resources>
