done-> fix string values issues on activity cadastro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">bookshelf_firebase</string>
 
     //misc
-    <string name="descricao">Descrição</string>
+    <string name="name">Nome do Livro</string>
+    <string name="author">Autor:</string>
+    <string name="quantity">Quantidade</string>
 </resources>
