done-> function getLivroForm on MainAc(insert data on firebase) - MarcosSalazar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="name">Nome do Livro</string>
     <string name="author">Autor:</string>
     <string name="quantity">Quantidade</string>
+
+    //buttons
+    <string name="buttonSalvar">Salvar</string>
 </resources>
